# ur3e-microros

./: README.md
esp32_code/: platformio.ini
esp32_code/src/: main.cpp
ros2_ws/src/ur3e_esp32_control/: package.xml  setup.cfg  setup.py
ros2_ws/src/ur3e_esp32_control/ur3e_esp32_control/: __init__.py  button_input_node.py  calc_ik_node.py  direct_control2.py  direct_control_node.py  instruction_node.py  joint_state_tracker.py  robot_command_node.py
